--- a/cs-portfolio.html
+++ b/cs-portfolio.html
@@ -70,7 +70,7 @@
         }
 
         .social-links {
-            display: flex;
+            display: center;
             gap: 1rem;
             margin-top: 1rem;
         }
@@ -408,9 +408,7 @@
                 <h1>CHEN-WEI CHANG</h1>
                 <p>Computer Science | Gamer</p>
                 <div class="social-links">
-                    <a href="#" target="_blank">GitHub</a>
-                    <a href="#" target="_blank">LinkedIn</a>
-                    <a href="#" target="_blank">Medium</a>
+                    <a href="https://github.com/happy-capybara-man" target="_blank">GitHub</a>
                 </div>
             </div>
         </div>
@@ -422,7 +420,6 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -431,9 +428,9 @@
         <section id="about" class="about-me">
             <h2>About Me</h2>
             <p>
-                Hello! I'm Ming-Che Chen, a graduating Computer Science student with a passion for software development
+                Hello! I'm Chen-Wei Chang, a graduating Computer Science student with a passion for software development
                 and artificial intelligence. I have a solid foundation in programming and relevant project experience,
-                with a particular focus on web development and machine learning.
+                with a particular focus on machine learning.
             </p>
             <p>
                 Throughout my academic journey, I've participated in multiple team projects and developed several
@@ -478,20 +475,15 @@
             <h2>Projects</h2>
             <div class="projects-container">
                 <div class="project-card">
-                    <div class="project-image">Intelligent Learning Platform</div>
                     <div class="project-info">
-                        <h3>Intelligent Learning Platform</h3>
-                        <p>Developed an online learning platform that integrates AI technology to automatically adjust
-                            course content and difficulty based on student learning style and progress.</p>
+                        <h3>Discord Bot</h3>
+                        <p>Developed a Discord bot that check player's rank and post in Discord channel</p>
                         <div class="project-tags">
-                            <span class="project-tag">React</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">TensorFlow</span>
-                            <span class="project-tag">MongoDB</span>
+                            <span class="project-tag">Discord.py</span>
+                            <span class="project-tag">Python</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank">View Project</a>
-                            <a href="#" target="_blank">Source Code</a>
+                            <a href="https://github.com/happy-capybara-man/discordBot" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -509,33 +501,22 @@
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <h3>National Feng-Shan Senior High School</h3>
-                            <h4>2021 - Present</h4>
-                            <p>Self-taught blockchain developer with a strong foundation in Solidity, Ethereum, and
-                                smart contract development. Active participant in blockchain communities and forums.</p>
+                            <h4>2018-2021</h4>
+                            <p>High school education</p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
-                            <h3>Blockchain Development Bootcamp</h3>
-                            <h4>Online Learning Platform | Summer 2024</h4>
-                            <p>Completed intensive 8-week bootcamp focused on Ethereum development, Solidity, and dApp
-                                creation.</p>
+                            <h3>University of Taipei</h3>
+                            <h4>2021-present</h4>
+                            <p>Computer Science</p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
-                            <h3>XueDao-Hackathon</h3>
-                            <h4>ETH Global | Summer 2024</h4>
-                            <p>Participated in 48-hour hackathon developing a decentralized news platform. Collaborated
-                                with students from other schools.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-content">
-                            <h3>Blockchain study group</h3>
-                            <h4>2025 - Present</h4>
-                            <p>A blockchain study group that host monthly meetups to discuss and learn about blockchain
-                                technology.</p>
+                            <h3>National Chung Cheng University</h3>
+                            <h4>2025-present</h4>
+                            <p>Master's in Computer Science</p>
                         </div>
                     </div>
                 </div>
