--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ming-Che Chen - Computer Science Portfolio</title>
+    <title>CHEN-WEI CHANG - Computer Science Portfolio</title>
     <style>
         :root {
             --primary-color: #3498db;
